# deepfocus

./: .fletignore  .gitignore  README.md  build_windows.ps1  copy_plugin_dlls.ps1  create_installer.ps1  installer.iss  pyproject.toml
build-templates/flet-build-template/{{cookiecutter.out_dir}}/: pubspec.yaml
build-templates/flet-build-template/{{cookiecutter.out_dir}}/android/app/src/main/: AndroidManifest.xml
build-templates/flet-build-template/{{cookiecutter.out_dir}}/ios/: Podfile
build-templates/flet-build-template/{{cookiecutter.out_dir}}/lib/: main.dart
build-templates/flet-build-template/{{cookiecutter.out_dir}}/web/: flutter_bootstrap.js  index.html
build-templates/flet-build-template/{{cookiecutter.out_dir}}/windows/: CMakeLists.txt
build-templates/flet-build-template/{{cookiecutter.out_dir}}/windows/runner/: CMakeLists.txt  runner.exe.manifest
src/: main.py
src/config/: colors.py  constants.py  settings.py
src/core/: auth.py  background_service.py  blocker.py  dns_blocker.py  hosts_manager.py  process_blocker.py  protection_monitor.py
src/ui/: custom_domain_page.py  login_page.py  main_page.py  settings_page.py
src/ui/components/: footer.py  platform_card.py
src/utils/: language.py  system_integration.py  validators.py
tests/: test_auth.py  test_blocker.py  test_colors.py  test_constants.py  test_hosts_manager.py  test_language.py  test_settings.py  test_system_integration.py  test_validators.py
